# Newberry-Florida-AMI-Portal-Utils

./: .env.example  LICENSE  README.md  get_current_usage_water.py  get_meter_listing.md  get_meter_listing.py  pyproject.toml
docs/: get_meter_listing.md
